--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2771,18 +2771,18 @@ a {
     left: -1rem;
   }
 }
-.cid-tzE7i3RsZf {
+.cid-tzEuLnyCBh {
   padding-top: 8rem;
   padding-bottom: 8rem;
   background-color: #fcf8ff;
 }
-.cid-tzE7i3RsZf .item {
+.cid-tzEuLnyCBh .item {
   padding-bottom: 2rem;
 }
-.cid-tzE7i3RsZf .item-wrapper {
+.cid-tzEuLnyCBh .item-wrapper {
   position: relative;
 }
-.cid-tzE7i3RsZf .item-wrapper .icon-wrapper {
+.cid-tzEuLnyCBh .item-wrapper .icon-wrapper {
   pointer-events: none;
   position: absolute;
   width: 60px;
@@ -2801,26 +2801,26 @@ a {
   background-color: #1b1b1b;
   transition: 0.2s;
 }
-.cid-tzE7i3RsZf .item-wrapper:hover .icon-wrapper {
+.cid-tzEuLnyCBh .item-wrapper:hover .icon-wrapper {
   opacity: 0.7;
 }
-.cid-tzE7i3RsZf .carousel-control,
-.cid-tzE7i3RsZf .close {
+.cid-tzEuLnyCBh .carousel-control,
+.cid-tzEuLnyCBh .close {
   background: #1b1b1b;
 }
-.cid-tzE7i3RsZf .carousel-control-prev {
+.cid-tzEuLnyCBh .carousel-control-prev {
   margin-left: 2.5rem;
 }
-.cid-tzE7i3RsZf .carousel-control-prev span {
+.cid-tzEuLnyCBh .carousel-control-prev span {
   margin-right: 5px;
 }
-.cid-tzE7i3RsZf .carousel-control-next {
+.cid-tzEuLnyCBh .carousel-control-next {
   margin-right: 2.5rem;
 }
-.cid-tzE7i3RsZf .carousel-control-next span {
+.cid-tzEuLnyCBh .carousel-control-next span {
   margin-left: 5px;
 }
-.cid-tzE7i3RsZf .close {
+.cid-tzEuLnyCBh .close {
   position: fixed;
   opacity: 0.5;
   font-size: 22px;
@@ -2840,15 +2840,15 @@ a {
   justify-content: center;
   display: flex;
 }
-.cid-tzE7i3RsZf .close::before {
+.cid-tzEuLnyCBh .close::before {
   content: '\e91a';
 }
-.cid-tzE7i3RsZf .close:hover {
+.cid-tzEuLnyCBh .close:hover {
   opacity: 1;
   background: #000;
   color: #fff;
 }
-.cid-tzE7i3RsZf .carousel-control {
+.cid-tzEuLnyCBh .carousel-control {
   display: flex;
   top: 50%;
   width: 60px;
@@ -2860,26 +2860,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-tzE7i3RsZf .carousel-control.carousel-control-prev {
+.cid-tzEuLnyCBh .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-tzE7i3RsZf .carousel-control.carousel-control-next {
+.cid-tzEuLnyCBh .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-tzE7i3RsZf .carousel-control {
+  .cid-tzEuLnyCBh .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-tzE7i3RsZf .carousel-indicators {
+.cid-tzEuLnyCBh .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 3px;
 }
-.cid-tzE7i3RsZf .carousel-indicators li {
+.cid-tzEuLnyCBh .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -2891,15 +2891,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-tzE7i3RsZf .carousel-indicators li.active,
-.cid-tzE7i3RsZf .carousel-indicators li:hover {
+.cid-tzEuLnyCBh .carousel-indicators li.active,
+.cid-tzEuLnyCBh .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-tzE7i3RsZf .carousel-indicators li::after,
-.cid-tzE7i3RsZf .carousel-indicators li::before {
+.cid-tzEuLnyCBh .carousel-indicators li::after,
+.cid-tzEuLnyCBh .carousel-indicators li::before {
   content: none;
 }
-.cid-tzE7i3RsZf .carousel-indicators.ie-fix {
+.cid-tzEuLnyCBh .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -2907,60 +2907,60 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-tzE7i3RsZf .carousel-indicators {
+  .cid-tzEuLnyCBh .carousel-indicators {
     display: none !important;
   }
 }
 @media (max-width: 991px) {
-  .cid-tzE7i3RsZf .carousel-indicators {
+  .cid-tzEuLnyCBh .carousel-indicators {
     margin-bottom: 3.625rem !important;
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-tzE7i3RsZf .carousel-indicators {
+  .cid-tzEuLnyCBh .carousel-indicators {
     display: none;
   }
 }
-.cid-tzE7i3RsZf .carousel-inner {
+.cid-tzEuLnyCBh .carousel-inner {
   display: flex;
   align-items: center;
 }
-.cid-tzE7i3RsZf .carousel-inner > .active {
+.cid-tzEuLnyCBh .carousel-inner > .active {
   display: block;
 }
-.cid-tzE7i3RsZf .carousel-control.left {
+.cid-tzEuLnyCBh .carousel-control.left {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-tzE7i3RsZf .carousel-control.right {
+.cid-tzEuLnyCBh .carousel-control.right {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-tzE7i3RsZf .carousel-control:hover {
+.cid-tzEuLnyCBh .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
 @media (max-width: 768px) {
-  .cid-tzE7i3RsZf .carousel-control,
-  .cid-tzE7i3RsZf .carousel-indicators,
-  .cid-tzE7i3RsZf .modal .close {
+  .cid-tzEuLnyCBh .carousel-control,
+  .cid-tzEuLnyCBh .carousel-indicators,
+  .cid-tzEuLnyCBh .modal .close {
     position: fixed;
   }
 }
 @media (max-width: 767px) {
-  .cid-tzE7i3RsZf .mbr-slider .carousel-control {
+  .cid-tzEuLnyCBh .mbr-slider .carousel-control {
     top: auto;
     bottom: 20px;
   }
-  .cid-tzE7i3RsZf .mbr-slider > .container .carousel-control {
+  .cid-tzEuLnyCBh .mbr-slider > .container .carousel-control {
     margin-bottom: 0;
   }
 }
-.cid-tzE7i3RsZf .carousel-indicators .active,
-.cid-tzE7i3RsZf .carousel-indicators li {
+.cid-tzEuLnyCBh .carousel-indicators .active,
+.cid-tzEuLnyCBh .carousel-indicators li {
   width: 7px;
   height: 7px;
   margin: 3px;
@@ -2968,75 +2968,75 @@ a {
   opacity: 0.5;
   border: 4px solid #000000;
 }
-.cid-tzE7i3RsZf .carousel-indicators .active {
+.cid-tzEuLnyCBh .carousel-indicators .active {
   background: #fff;
 }
-.cid-tzE7i3RsZf .carousel-indicators li {
+.cid-tzEuLnyCBh .carousel-indicators li {
   max-width: 15px;
   max-height: 15px;
   border-radius: 50%;
 }
-.cid-tzE7i3RsZf .modal {
+.cid-tzEuLnyCBh .modal {
   padding-left: 0 !important;
   position: fixed;
   overflow: hidden;
   padding-right: 0 !important;
 }
-.cid-tzE7i3RsZf .modal-dialog {
+.cid-tzEuLnyCBh .modal-dialog {
   margin: 0 auto;
   max-width: 100%;
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.cid-tzE7i3RsZf .modal-content {
+.cid-tzEuLnyCBh .modal-content {
   border-radius: 0;
   border: none;
   background: transparent;
 }
-.cid-tzE7i3RsZf .modal-body {
+.cid-tzEuLnyCBh .modal-body {
   padding: 0;
   display: flex;
   align-items: center;
 }
-.cid-tzE7i3RsZf .modal-body img {
+.cid-tzEuLnyCBh .modal-body img {
   width: 100%;
   object-fit: contain;
   max-height: calc(100vh - 1.75rem);
 }
-.cid-tzE7i3RsZf .carousel {
+.cid-tzEuLnyCBh .carousel {
   width: 100%;
 }
-.cid-tzE7i3RsZf .modal-backdrop.in {
+.cid-tzEuLnyCBh .modal-backdrop.in {
   opacity: 0.8;
 }
-.cid-tzE7i3RsZf .modal.fade .modal-dialog {
+.cid-tzEuLnyCBh .modal.fade .modal-dialog {
   transition: margin-top 0.3s ease-out;
 }
-.cid-tzE7i3RsZf .modal.fade .modal-dialog,
-.cid-tzE7i3RsZf .modal.in .modal-dialog {
+.cid-tzEuLnyCBh .modal.fade .modal-dialog,
+.cid-tzEuLnyCBh .modal.in .modal-dialog {
   transform: none;
 }
-.cid-tzE7i3RsZf .mbr-gallery .item-wrapper {
+.cid-tzEuLnyCBh .mbr-gallery .item-wrapper {
   cursor: pointer;
 }
-.cid-tzE7i3RsZf H6 {
+.cid-tzEuLnyCBh H6 {
   text-align: center;
 }
-.cid-tzE7i3RsZf H4 {
+.cid-tzEuLnyCBh H4 {
   color: #8e8d8a;
 }
-.cid-tzE7i3RsZf H3 {
+.cid-tzEuLnyCBh H3 {
   color: #cb8aff;
 }
-.cid-tzE7i4hrpw {
+.cid-tzEuModQCS {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-tzE7i4hrpw .mbr-fallback-image.disabled {
+.cid-tzEuModQCS .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tzE7i4hrpw .mbr-fallback-image {
+.cid-tzEuModQCS .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -3046,30 +3046,30 @@ a {
   top: 0;
 }
 @media (max-width: 991px) {
-  .cid-tzE7i4hrpw .image-wrapper {
+  .cid-tzEuModQCS .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-tzE7i4hrpw img {
+.cid-tzEuModQCS img {
   width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-tzE7i4hrpw .text-wrapper {
+  .cid-tzEuModQCS .text-wrapper {
     padding: 2rem;
   }
 }
-.cid-tzE7i4hrpw .mbr-section-title {
+.cid-tzEuModQCS .mbr-section-title {
   text-align: left;
 }
-.cid-tzE7i4tACB {
+.cid-tzEuMZiyo8 {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-tzE7i4tACB .mbr-fallback-image.disabled {
+.cid-tzEuMZiyo8 .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tzE7i4tACB .mbr-fallback-image {
+.cid-tzEuMZiyo8 .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -3079,33 +3079,33 @@ a {
   top: 0;
 }
 @media (max-width: 991px) {
-  .cid-tzE7i4tACB .image-wrapper {
+  .cid-tzEuMZiyo8 .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-tzE7i4tACB .row {
+.cid-tzEuMZiyo8 .row {
   flex-direction: row-reverse;
 }
-.cid-tzE7i4tACB img {
+.cid-tzEuMZiyo8 img {
   width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-tzE7i4tACB .text-wrapper {
+  .cid-tzEuMZiyo8 .text-wrapper {
     padding: 2rem;
   }
 }
-.cid-tzE7i5caLc {
+.cid-tzEuOJHJ5f {
   padding-top: 8rem;
   padding-bottom: 8rem;
   background-color: #ffffff;
 }
-.cid-tzE7i5caLc .item {
+.cid-tzEuOJHJ5f .item {
   padding-bottom: 2rem;
 }
-.cid-tzE7i5caLc .item-wrapper {
+.cid-tzEuOJHJ5f .item-wrapper {
   position: relative;
 }
-.cid-tzE7i5caLc .item-wrapper .icon-wrapper {
+.cid-tzEuOJHJ5f .item-wrapper .icon-wrapper {
   pointer-events: none;
   position: absolute;
   width: 60px;
@@ -3124,26 +3124,26 @@ a {
   background-color: #1b1b1b;
   transition: 0.2s;
 }
-.cid-tzE7i5caLc .item-wrapper:hover .icon-wrapper {
+.cid-tzEuOJHJ5f .item-wrapper:hover .icon-wrapper {
   opacity: 0.7;
 }
-.cid-tzE7i5caLc .carousel-control,
-.cid-tzE7i5caLc .close {
+.cid-tzEuOJHJ5f .carousel-control,
+.cid-tzEuOJHJ5f .close {
   background: #1b1b1b;
 }
-.cid-tzE7i5caLc .carousel-control-prev {
+.cid-tzEuOJHJ5f .carousel-control-prev {
   margin-left: 2.5rem;
 }
-.cid-tzE7i5caLc .carousel-control-prev span {
+.cid-tzEuOJHJ5f .carousel-control-prev span {
   margin-right: 5px;
 }
-.cid-tzE7i5caLc .carousel-control-next {
+.cid-tzEuOJHJ5f .carousel-control-next {
   margin-right: 2.5rem;
 }
-.cid-tzE7i5caLc .carousel-control-next span {
+.cid-tzEuOJHJ5f .carousel-control-next span {
   margin-left: 5px;
 }
-.cid-tzE7i5caLc .close {
+.cid-tzEuOJHJ5f .close {
   position: fixed;
   opacity: 0.5;
   font-size: 22px;
@@ -3163,15 +3163,15 @@ a {
   justify-content: center;
   display: flex;
 }
-.cid-tzE7i5caLc .close::before {
+.cid-tzEuOJHJ5f .close::before {
   content: '\e91a';
 }
-.cid-tzE7i5caLc .close:hover {
+.cid-tzEuOJHJ5f .close:hover {
   opacity: 1;
   background: #000;
   color: #fff;
 }
-.cid-tzE7i5caLc .carousel-control {
+.cid-tzEuOJHJ5f .carousel-control {
   display: flex;
   top: 50%;
   width: 60px;
@@ -3183,26 +3183,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-tzE7i5caLc .carousel-control.carousel-control-prev {
+.cid-tzEuOJHJ5f .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-tzE7i5caLc .carousel-control.carousel-control-next {
+.cid-tzEuOJHJ5f .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-tzE7i5caLc .carousel-control {
+  .cid-tzEuOJHJ5f .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-tzE7i5caLc .carousel-indicators {
+.cid-tzEuOJHJ5f .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 3px;
 }
-.cid-tzE7i5caLc .carousel-indicators li {
+.cid-tzEuOJHJ5f .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -3214,15 +3214,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-tzE7i5caLc .carousel-indicators li.active,
-.cid-tzE7i5caLc .carousel-indicators li:hover {
+.cid-tzEuOJHJ5f .carousel-indicators li.active,
+.cid-tzEuOJHJ5f .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-tzE7i5caLc .carousel-indicators li::after,
-.cid-tzE7i5caLc .carousel-indicators li::before {
+.cid-tzEuOJHJ5f .carousel-indicators li::after,
+.cid-tzEuOJHJ5f .carousel-indicators li::before {
   content: none;
 }
-.cid-tzE7i5caLc .carousel-indicators.ie-fix {
+.cid-tzEuOJHJ5f .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -3230,60 +3230,60 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-tzE7i5caLc .carousel-indicators {
+  .cid-tzEuOJHJ5f .carousel-indicators {
     display: none !important;
   }
 }
 @media (max-width: 991px) {
-  .cid-tzE7i5caLc .carousel-indicators {
+  .cid-tzEuOJHJ5f .carousel-indicators {
     margin-bottom: 3.625rem !important;
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-tzE7i5caLc .carousel-indicators {
+  .cid-tzEuOJHJ5f .carousel-indicators {
     display: none;
   }
 }
-.cid-tzE7i5caLc .carousel-inner {
+.cid-tzEuOJHJ5f .carousel-inner {
   display: flex;
   align-items: center;
 }
-.cid-tzE7i5caLc .carousel-inner > .active {
+.cid-tzEuOJHJ5f .carousel-inner > .active {
   display: block;
 }
-.cid-tzE7i5caLc .carousel-control.left {
+.cid-tzEuOJHJ5f .carousel-control.left {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-tzE7i5caLc .carousel-control.right {
+.cid-tzEuOJHJ5f .carousel-control.right {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-tzE7i5caLc .carousel-control:hover {
+.cid-tzEuOJHJ5f .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
 @media (max-width: 768px) {
-  .cid-tzE7i5caLc .carousel-control,
-  .cid-tzE7i5caLc .carousel-indicators,
-  .cid-tzE7i5caLc .modal .close {
+  .cid-tzEuOJHJ5f .carousel-control,
+  .cid-tzEuOJHJ5f .carousel-indicators,
+  .cid-tzEuOJHJ5f .modal .close {
     position: fixed;
   }
 }
 @media (max-width: 767px) {
-  .cid-tzE7i5caLc .mbr-slider .carousel-control {
+  .cid-tzEuOJHJ5f .mbr-slider .carousel-control {
     top: auto;
     bottom: 20px;
   }
-  .cid-tzE7i5caLc .mbr-slider > .container .carousel-control {
+  .cid-tzEuOJHJ5f .mbr-slider > .container .carousel-control {
     margin-bottom: 0;
   }
 }
-.cid-tzE7i5caLc .carousel-indicators .active,
-.cid-tzE7i5caLc .carousel-indicators li {
+.cid-tzEuOJHJ5f .carousel-indicators .active,
+.cid-tzEuOJHJ5f .carousel-indicators li {
   width: 7px;
   height: 7px;
   margin: 3px;
@@ -3291,74 +3291,74 @@ a {
   opacity: 0.5;
   border: 4px solid #000000;
 }
-.cid-tzE7i5caLc .carousel-indicators .active {
+.cid-tzEuOJHJ5f .carousel-indicators .active {
   background: #fff;
 }
-.cid-tzE7i5caLc .carousel-indicators li {
+.cid-tzEuOJHJ5f .carousel-indicators li {
   max-width: 15px;
   max-height: 15px;
   border-radius: 50%;
 }
-.cid-tzE7i5caLc .modal {
+.cid-tzEuOJHJ5f .modal {
   padding-left: 0 !important;
   position: fixed;
   overflow: hidden;
   padding-right: 0 !important;
 }
-.cid-tzE7i5caLc .modal-dialog {
+.cid-tzEuOJHJ5f .modal-dialog {
   margin: 0 auto;
   max-width: 100%;
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.cid-tzE7i5caLc .modal-content {
+.cid-tzEuOJHJ5f .modal-content {
   border-radius: 0;
   border: none;
   background: transparent;
 }
-.cid-tzE7i5caLc .modal-body {
+.cid-tzEuOJHJ5f .modal-body {
   padding: 0;
   display: flex;
   align-items: center;
 }
-.cid-tzE7i5caLc .modal-body img {
+.cid-tzEuOJHJ5f .modal-body img {
   width: 100%;
   object-fit: contain;
   max-height: calc(100vh - 1.75rem);
 }
-.cid-tzE7i5caLc .carousel {
+.cid-tzEuOJHJ5f .carousel {
   width: 100%;
 }
-.cid-tzE7i5caLc .modal-backdrop.in {
+.cid-tzEuOJHJ5f .modal-backdrop.in {
   opacity: 0.8;
 }
-.cid-tzE7i5caLc .modal.fade .modal-dialog {
+.cid-tzEuOJHJ5f .modal.fade .modal-dialog {
   transition: margin-top 0.3s ease-out;
 }
-.cid-tzE7i5caLc .modal.fade .modal-dialog,
-.cid-tzE7i5caLc .modal.in .modal-dialog {
+.cid-tzEuOJHJ5f .modal.fade .modal-dialog,
+.cid-tzEuOJHJ5f .modal.in .modal-dialog {
   transform: none;
 }
-.cid-tzE7i5caLc .mbr-gallery .item-wrapper {
+.cid-tzEuOJHJ5f .mbr-gallery .item-wrapper {
   cursor: pointer;
 }
-.cid-tzE7i5caLc H6 {
+.cid-tzEuOJHJ5f H6 {
   text-align: center;
 }
-.cid-tzE7i5caLc H4 {
+.cid-tzEuOJHJ5f H4 {
   color: #8e8d8a;
 }
-.cid-tzE7i5caLc H3 {
+.cid-tzEuOJHJ5f H3 {
   color: #cb8aff;
 }
-.cid-tzE7i5ydnn {
+.cid-tzEuS2ULhp {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.cid-tzE7i5ydnn .mbr-fallback-image.disabled {
+.cid-tzEuS2ULhp .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tzE7i5ydnn .mbr-fallback-image {
+.cid-tzEuS2ULhp .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -3368,18 +3368,18 @@ a {
   top: 0;
   background-image: url("../../../assets/images/mbr-1920x1440.jpeg");
 }
-.cid-tzE7i5ydnn .row {
+.cid-tzEuS2ULhp .row {
   align-items: stretch;
   justify-content: center;
 }
-.cid-tzE7i5ydnn .img-item {
+.cid-tzEuS2ULhp .img-item {
   position: relative;
 }
-.cid-tzE7i5ydnn .img-item img {
+.cid-tzEuS2ULhp .img-item img {
   width: 100%;
   object-fit: cover;
 }
-.cid-tzE7i5ydnn .img-item .img-description {
+.cid-tzEuS2ULhp .img-item .img-description {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -3387,7 +3387,7 @@ a {
   padding: .5rem 1rem .5rem;
   word-break: break-word;
 }
-.cid-tzE7i5ydnn .img-item .img-description p {
+.cid-tzEuS2ULhp .img-item .img-description p {
   margin-bottom: 0;
 }
 .cid-tzE7i71Zj4 {
