--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1449,6 +1449,29 @@ a {
     left: -1rem;
   }
 }
+.cid-tzWcjS1qN1 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fcf8ff;
+}
+.cid-tzWcjS1qN1 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tzWcjS1qN1 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tzWcjS1qN1 .mbr-section-title {
+  color: #cb8aff;
+}
+.cid-tzWcjS1qN1 .mbr-section-subtitle {
+  color: #8e8d8a;
+}
 .cid-tzWb6Zb5do {
   padding-top: 5rem;
   padding-bottom: 5rem;
