--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2390,6 +2390,39 @@ a {
 .cid-tzE9luswOm .mbr-description {
   text-align: center;
 }
+.cid-tCEtRP8Bfd {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #fafafa;
+}
+.cid-tCEtRP8Bfd .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tCEtRP8Bfd .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-tCEtRP8Bfd .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-tCEtRP8Bfd .row {
+  flex-direction: row-reverse;
+}
+.cid-tCEtRP8Bfd img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-tCEtRP8Bfd .text-wrapper {
+    padding: 2rem;
+  }
+}
 .cid-tpRqYHuF5L {
   padding-top: 150px;
   padding-bottom: 135px;
