--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -888,7 +888,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-s48OLK6784 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 6.5rem);
   }
 }
 .cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1230,7 +1230,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tfXaVXqwLS .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 6.5rem);
   }
 }
 .cid-tfXaVXqwLS .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1710,7 +1710,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tfXaIBb1c2 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 6.5rem);
   }
 }
 .cid-tfXaIBb1c2 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -2296,7 +2296,7 @@ a {
 .cid-tzE8NvdYT4 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #fafafa;
+  background-color: #bbbbbb;
 }
 .cid-tzE8NvdYT4 .mbr-fallback-image.disabled {
   display: none;
@@ -2362,7 +2362,7 @@ a {
 .cid-tzE9luswOm {
   padding-top: 10rem;
   padding-bottom: 10rem;
-  background-color: #fafafa;
+  background-color: #bbbbbb;
 }
 .cid-tzE9luswOm .mbr-fallback-image.disabled {
   display: none;
@@ -2650,7 +2650,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tzEstcqBu1 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 6.5rem);
   }
 }
 .cid-tzEstcqBu1 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -3765,7 +3765,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-s48OLK6784 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 6.5rem);
   }
 }
 .cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -4107,7 +4107,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tfXaIBb1c2 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 6.5rem);
   }
 }
 .cid-tfXaIBb1c2 .navbar.collapsed .dropdown-menu .dropdown-submenu {
